Fix resource deletion failure when browsing tag in resource manager.

BUG:446802